<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center_horizontal|center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_day"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:gravity="left"
        android:layout_marginLeft="8dp"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/birth"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_weight="5"
            android:gravity="center"
            android:background="@drawable/custom_input"
            android:hint="@string/birthday"
            android:inputType="date"/>
        <CheckBox
            android:id="@+id/ck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexeform"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:gravity="left"
        android:layout_marginLeft="8dp"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/sexe"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_weight="5"
            android:gravity="center"
            android:foreground="@drawable/custom_input"
            android:hint="@string/sexe"
            android:inputType="text"/>
        <CheckBox
            android:id="@+id/ck4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:gravity="left"
        android:layout_marginLeft="8dp"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/adress"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_weight="5"
            android:gravity="center"
            android:foreground="@drawable/custom_input"
            android:hint="@string/adress"
            android:inputType="text"/>
        <CheckBox
            android:id="@+id/ck5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nationalityform"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:gravity="left"
        android:layout_marginLeft="8dp"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/nationality"
            android:layout_width="140dp"
            android:layout_weight="5"
            android:layout_height="45dp"
            android:gravity="center"
            android:hint="@string/nationality"
            android:foreground="@drawable/custom_input"
            android:inputType="text"/>
        <CheckBox
            android:id="@+id/ck6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

</LinearLayout>