<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center_horizontal|center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jobform"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:gravity="left"
        android:layout_marginLeft="8dp"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/job"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_weight="5"
            android:gravity="center"
            android:foreground="@drawable/custom_input"
            android:hint="@string/job"
            android:inputType="text"/>
        <CheckBox
            android:id="@+id/ck7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salaryform"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:gravity="left"
        android:layout_marginLeft="8dp"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/salarie"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_weight="5"
            android:gravity="center"
            android:foreground="@drawable/custom_input"
            android:hint="@string/salary"
            android:inputType="number"/>
        <CheckBox
            android:id="@+id/ck8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
</LinearLayout>