<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp" android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232323"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="90dp"/>

        <TextView
            android:id="@+id/dialog_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Phone Number"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/dialog_mailview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Adress Mail"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/dialog_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:drawableStart="@drawable/custom_phone_icon"
                android:textColor="@color/bleu"
                android:drawablePadding="10dp"/>
            <Button
                android:id="@+id/dialog_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                android:drawableStart="@drawable/ic_message"
                android:textColor="@color/vert"
                android:drawablePadding="10dp"/>
            <Button
                android:id="@+id/dialog_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:drawableStart="@drawable/custom_email_icon"
                android:textColor="@color/rouge"
                android:drawablePadding="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialog_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/c"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

</RelativeLayout>